--- a/git/disputils/file/config.mk.html
+++ b/git/disputils/file/config.mk.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> config.mk (179B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> config.mk (142B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -25,14 +25,14 @@
 <a href="#l7" id="l7">7</a>
 <a href="#l8" id="l8">8</a>
 </pre></td><td><pre>
-PREFIX = /usr
+PREFIX = /usr/local
 MANPREFIX = $(PREFIX)/share/man
 
 CC = cc
 LD = $(CC)
 
-CFLAGS +=  `pkg-config --cflags xcb xcb-randr` -pedantic -Wall -O2
-LDFLAGS += `pkg-config --libs xcb xcb-randr`
+CFLAGS  += -std=c99 -pedantic -Wall -O2
+LDFLAGS += -lxcb -lxcb-randr
 </pre></td></tr></table>
 </div>
 </body>
