--- a/git/disputils/file/man/Makefile.html
+++ b/git/disputils/file/man/Makefile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/README.html">README</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Makefile (314B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Makefile (329B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -35,6 +35,7 @@
 <a href="#l17" id="l17">17</a>
 <a href="#l18" id="l18">18</a>
 <a href="#l19" id="l19">19</a>
+<a href="#l20" id="l20">20</a>
 </pre></td><td><pre>
 include ../config.mk
 
@@ -43,6 +44,7 @@ MAN =           \
 	pfd.1   \
 	ppd.1   \
 	dattr.1 \
+	disputils.1 \
 
 .POSIX:
 
