--- a/git/disputils/file/man/ppd.1.html
+++ b/git/disputils/file/man/ppd.1.html
@@ -37,10 +37,10 @@
 .Dt PPD 1
 .Os disputils
 .Sh NAME
-.Nm pfd
+.Nm ppd
 .Nd print primary display
 .Sh SYNOPSIS
-.Nm pfd
+.Nm ppd
 .Sh DESCRIPTION
 Print the ID of the current primary display to
 .Dv stdout .
