--- a/git/dotfiles/file/ncmpcpp/.ncmpcpp/error.log.html
+++ b/git/dotfiles/file/ncmpcpp/.ncmpcpp/error.log.html
@@ -15,10 +15,9 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> error.log (62B)</p><hr/><table id="blob"><tr><td class="num"><pre>
-<a href="#l1" id="l1">1</a>
+<p> error.log (0B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 </pre></td><td><pre>
-/home/tudurom/.homesick/repos/dotfiles/home/.ncmpcpp/error.log</pre></td></tr></table>
+</pre></td></tr></table>
 </div>
 </body>
 </html>
