--- a/git/dotfiles/file/wmrc/.config/sxhkd/commons.html
+++ b/git/dotfiles/file/wmrc/.config/sxhkd/commons.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> commons (725B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> commons (729B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -82,7 +82,7 @@ super + Return
   urxvt
 
 super + space
-  dmenu_run
+  dmenu_wrapper
 
 super + q
   showtodo
