--- a/git/dotfiles/file/x/.xinitrc.html
+++ b/git/dotfiles/file/x/.xinitrc.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .xinitrc (852B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .xinitrc (853B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -67,6 +67,7 @@
 <a href="#l49" id="l49">49</a>
 <a href="#l50" id="l50">50</a>
 <a href="#l51" id="l51">51</a>
+<a href="#l52" id="l52">52</a>
 </pre></td><td><pre>
 #!/bin/sh
 
@@ -118,6 +119,7 @@ minbar &amp;
 for s in $HOME/bin/notifyd-*; do
     $s &amp;
 done
+
 exec startwm bspwm
 </pre></td></tr></table>
 </div>
