--- a/git/dotfiles/files.html
+++ b/git/dotfiles/files.html
@@ -33,7 +33,7 @@
 <tr><td>-rw-r--r--</td><td><a href="file/asciiart/asciiart/unix_is_simple.txt.html">asciiart/asciiart/unix_is_simple.txt</a></td><td class="num">20L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/asciiart/asciiart/weegee.txt.html">asciiart/asciiart/weegee.txt</a></td><td class="num">20L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/bspwm/.config/bspwm/bspwmrc.html">bspwm/.config/bspwm/bspwmrc</a></td><td class="num">26L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/bspwm/.config/sxhkd/sxhkdrc_bspwm.html">bspwm/.config/sxhkd/sxhkdrc_bspwm</a></td><td class="num">123L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/bspwm/.config/sxhkd/sxhkdrc_bspwm.html">bspwm/.config/sxhkd/sxhkdrc_bspwm</a></td><td class="num">119L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/compton/.compton.conf.html">compton/.compton.conf</a></td><td class="num">89L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/.config/sxhkd/sxhkdrc_cwm.html">cwm/.config/sxhkd/sxhkdrc_cwm</a></td><td class="num">6L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/.cwmrc.html">cwm/.cwmrc</a></td><td class="num">107L</td></tr>
@@ -44,9 +44,8 @@
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/gtk.css.html">gtk/.config/gtk-3.0/gtk.css</a></td><td class="num">6L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/settings.ini.html">gtk/.config/gtk-3.0/settings.ini</a></td><td class="num">16L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/mpd/.mpd/mpd.conf.html">mpd/.mpd/mpd.conf</a></td><td class="num">20L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/ncmpcpp/.ncmpcpp/bindings.html">ncmpcpp/.ncmpcpp/bindings</a></td><td class="num">539L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ncmpcpp/.ncmpcpp/config.html">ncmpcpp/.ncmpcpp/config</a></td><td class="num">63L</td></tr>
-<tr><td>l---------</td><td><a href="file/ncmpcpp/.ncmpcpp/error.log.html">ncmpcpp/.ncmpcpp/error.log</a></td><td class="num">1L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/ncmpcpp/.ncmpcpp/error.log.html">ncmpcpp/.ncmpcpp/error.log</a></td><td class="num">0B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/npm/.npmrc.html">npm/.npmrc</a></td><td class="num">1L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/.init.vim-rplugin~.html">nvim/.config/nvim/.init.vim-rplugin~</a></td><td class="num">12L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/miromiro.vim.html">nvim/.config/nvim/colors/miromiro.vim</a></td><td class="num">113L</td></tr>
@@ -117,7 +116,6 @@
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/madeon-pillar.png.html">wallpapers/wallpapers/madeon-pillar.png</a></td><td class="num">15546035B</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wallpapers/wallpapers/makeblur.sh.html">wallpapers/wallpapers/makeblur.sh</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/moonbow.png.html">wallpapers/wallpapers/moonbow.png</a></td><td class="num">424B</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/nomanssky.png.html">wallpapers/wallpapers/nomanssky.png</a></td><td class="num">7814986B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel.jpg.html">wallpapers/wallpapers/pixel.jpg</a></td><td class="num">222502B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel2.png.html">wallpapers/wallpapers/pixel2.png</a></td><td class="num">220467B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/rad.png.html">wallpapers/wallpapers/rad.png</a></td><td class="num">3572087B</td></tr>
@@ -140,6 +138,7 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/blur.html">wmrc/.scripts/blur</a></td><td class="num">18L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/closestw.html">wmrc/.scripts/closestw</a></td><td class="num">47L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/cornerw.html">wmrc/.scripts/cornerw</a></td><td class="num">44L</td></tr>
+<tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/dmenu_wrapper.html">wmrc/.scripts/dmenu_wrapper</a></td><td class="num">3L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/focusw.html">wmrc/.scripts/focusw</a></td><td class="num">54L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/fullscreenw.html">wmrc/.scripts/fullscreenw</a></td><td class="num">46L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/groaw.html">wmrc/.scripts/groaw</a></td><td class="num">100L</td></tr>
@@ -162,7 +161,7 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/xwait.html">wmrc/.scripts/xwait</a></td><td class="num">8680B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wmrc/.scripts/xwait.c.html">wmrc/.scripts/xwait.c</a></td><td class="num">10L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.Xresources.html">x/.Xresources</a></td><td class="num">10L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/x/.xinitrc.html">x/.xinitrc</a></td><td class="num">51L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/x/.xinitrc.html">x/.xinitrc</a></td><td class="num">52L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/README.md.html">x/.xres/README.md</a></td><td class="num">10L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/cloudy.html">x/.xres/colors/cloudy</a></td><td class="num">43L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/designr.html">x/.xres/colors/designr</a></td><td class="num">38L</td></tr>
