--- a/git/disputils/file/man/disputils.1.html
+++ b/git/disputils/file/man/disputils.1.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<title>pfd.1 - disputils - Utilities for getting information about connected displays.
+<title>disputils.1 - disputils - Utilities for getting information about connected displays.
 </title>
 <link rel="icon" type="image/png" href="../../favicon.png" />
 <link rel="alternate" type="application/atom+xml" title="disputils.git Atom Feed" href="../../atom.xml" />
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/README.html">README</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> pfd.1 (310B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> disputils.1 (558B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -32,23 +32,53 @@
 <a href="#l14" id="l14">14</a>
 <a href="#l15" id="l15">15</a>
 <a href="#l16" id="l16">16</a>
+<a href="#l17" id="l17">17</a>
+<a href="#l18" id="l18">18</a>
+<a href="#l19" id="l19">19</a>
+<a href="#l20" id="l20">20</a>
+<a href="#l21" id="l21">21</a>
+<a href="#l22" id="l22">22</a>
+<a href="#l23" id="l23">23</a>
+<a href="#l24" id="l24">24</a>
+<a href="#l25" id="l25">25</a>
+<a href="#l26" id="l26">26</a>
+<a href="#l27" id="l27">27</a>
+<a href="#l28" id="l28">28</a>
+<a href="#l29" id="l29">29</a>
+<a href="#l30" id="l30">30</a>
+<a href="#l31" id="l31">31</a>
 </pre></td><td><pre>
-.Dd April 16, 2016
-.Dt PFD 1
+.Dd August 2, 2016
+.Dt DISPUTILS 1
 .Os disputils
 .Sh NAME
-.Nm pfd
-.Nd print monitor containing the focused window
-.Sh SYNOPSIS
-.Nm pfd
+.Nm disputils
+.Nd utilities for getting information about connected displays
 .Sh DESCRIPTION
-Print the ID of the display containing the currently focused window to
-.Dv stdout .
+.Nm
+is a compilation of utilities for getting information about displays in C
+.Sh COMMANDS
+.Bl -tag -width Ds -offset 60
+.It dattr
+get display&apos;s attributes
+.It lsd
+list displays in use
+.It pfd
+print focused display
+.It ppd
+print primary display
+.El
 .Sh ENVIRONMENT
 .Nm
 acts on the X display specified by the
 .Ev DISPLAY
 variable.
+.Sh SEE ALSO
+.Xr dattr 1 ,
+.Xr lsd 1 ,
+.Xr pfd 1 ,
+.Xr ppd 1 ,
+.Xr wmutils 1
 </pre></td></tr></table>
 </div>
 </body>
