--- a/git/disputils/file/util.h.html
+++ b/git/disputils/file/util.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> util.h (514B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> util.h (1290B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -35,6 +35,12 @@
 <a href="#l17" id="l17">17</a>
 <a href="#l18" id="l18">18</a>
 <a href="#l19" id="l19">19</a>
+<a href="#l20" id="l20">20</a>
+<a href="#l21" id="l21">21</a>
+<a href="#l22" id="l22">22</a>
+<a href="#l23" id="l23">23</a>
+<a href="#l24" id="l24">24</a>
+<a href="#l25" id="l25">25</a>
 </pre></td><td><pre>
 /*
  * disputils util.h 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt; ix
@@ -44,16 +50,22 @@
 #ifndef UTIL_H__
 #define UTIL_H__
 
-void 		init_xcb (xcb_connection_t **);
-void 		kill_xcb (xcb_connection_t **);
+#include &lt;xcb/xcb.h&gt;
+#include &lt;xcb/randr.h&gt;
 
-void 		get_screen(xcb_connection_t *, xcb_screen_t **);
-int 		get_windows(xcb_connection_t *, xcb_window_t, xcb_window_t **);
+void                                  init_xcb(xcb_connection_t **);
+void                                  kill_xcb(xcb_connection_t **);
+void                                  get_screen(xcb_connection_t *, xcb_screen_t **);
 
-int 		exists    (xcb_connection_t *, xcb_window_t);
-int 		mapped    (xcb_connection_t *, xcb_window_t);
-int 		ignore    (xcb_connection_t *, xcb_window_t);
-
+int                                   get_outputs(xcb_connection_t *, xcb_randr_provider_t, xcb_randr_output_t **);
+int                                   get_providers(xcb_connection_t *, xcb_screen_t *, xcb_randr_provider_t **);
+xcb_randr_get_output_info_reply_t*    get_output_info(xcb_connection_t *, xcb_randr_output_t);
+uint8_t*                              get_output_name(xcb_connection_t *, xcb_randr_output_t);
+int                                   get_output_connection(xcb_connection_t *, xcb_randr_output_t);
+xcb_randr_get_crtc_info_reply_t*      get_output_crtc_info(xcb_connection_t *, xcb_randr_crtc_t);
+xcb_window_t                          get_focused_window(xcb_connection_t *);
+xcb_get_geometry_reply_t*             get_window_geometry(xcb_connection_t *, xcb_window_t);
+xcb_randr_get_output_primary_reply_t* get_primary_output(xcb_connection_t *);
 #endif
 </pre></td></tr></table>
 </div>
