--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-08-02 09:13</td><td><a href="commit/3808ca9e2b20f659886074972ca3912fc6d90760.html">install to /usr/local by default</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-08-02 09:06</td><td><a href="commit/7bb0537920e091c9a091f63672e57a992268711b.html">cleaned up indentation, comments and man pages</a></td><td>Tudor</td><td class="num">14</td><td class="num">+229</td><td class="num">-275</td></tr>
 <tr><td>2016-05-03 10:39</td><td><a href="commit/857d868922d67703cbfbf7856092a8381f306ca2.html">readme: new release</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
 <tr><td>2016-04-30 19:15</td><td><a href="commit/a37bd7213a6de833f3e2c51eedf5137053383eda.html">randr: fixed strange characters in get_output_name</a></td><td>Tudor</td><td class="num">5</td><td class="num">+12</td><td class="num">-17</td></tr>
 <tr><td>2016-04-23 02:01</td><td><a href="commit/fe3142b1b83c6042ad0f3bc696e657dad4aeb9b2.html">Merge branch &apos;master&apos; of yuuko:/srv/repositories/disputils</a></td><td>ix</td><td class="num">2</td><td class="num">+2</td><td class="num">-2</td></tr>
