--- a/git/disputils/file/LICENSE.html
+++ b/git/disputils/file/LICENSE.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> LICENSE (1481B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> LICENSE (1592B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -46,8 +46,14 @@
 <a href="#l28" id="l28">28</a>
 <a href="#l29" id="l29">29</a>
 <a href="#l30" id="l30">30</a>
+<a href="#l31" id="l31">31</a>
+<a href="#l32" id="l32">32</a>
+<a href="#l33" id="l33">33</a>
 </pre></td><td><pre>
-Copyright (c) 2016, ix/tudurom
+BSD-3 License
+
+Copyright (c) 2016, ix      &lt;arcetera at openmailbox dot org&gt;
+                    tudurom &lt;xenogenesis at openmailbox dot org&gt;
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
