--- a/git/disputils/file/ppd.c.html
+++ b/git/disputils/file/ppd.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> ppd.c (700B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> ppd.c (758B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -57,6 +57,8 @@
 <a href="#l39" id="l39">39</a>
 <a href="#l40" id="l40">40</a>
 <a href="#l41" id="l41">41</a>
+<a href="#l42" id="l42">42</a>
+<a href="#l43" id="l43">43</a>
 </pre></td><td><pre>
 /*
  * disputils ppd.c 04/17/2016 tudurom &lt;xenogenesis@openmailbox.org&gt; ix
@@ -70,14 +72,16 @@
 
 #include &quot;util.h&quot;
 
-xcb_connection_t *conn;
-xcb_screen_t *scrn;
+static xcb_connection_t *conn;
+static xcb_screen_t *scrn;
 
-void
+static void usage(char *);
+
+static void
 usage(char *name)
 {
-	printf(&quot;usage: %s \n&quot;, name);
-	exit(0);
+	fprintf(stderr, &quot;usage: %s \n&quot;, name);
+	exit(1);
 }
 
 int
